# T5-NLP-Model

./: .env  Dockerfile  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini
api/v1/: translate.py
core/: config.py
schemas/: translate.py
